# cusc

./: CMakeLists.txt  README.md
cusc/: CMakeLists.txt  basedefs.h
cusc/ast/: CMakeLists.txt  astnode.h  cap.cc  cap.h  feature.cc  feature.h  shader.h  typename.h
example/fill_ellipse/: farg,csp  vertex.csp
example/sprite/: frag.csp  vertex.csp
